# actix-todo-demo

./: Cargo.toml  README.md
src/: main.rs
src/dynamo/: crud.rs
src/todo/: model.rs  routes.rs
